--- a/README
+++ b/README
@@ -35,18 +35,13 @@ OpenXCAP is an open source, easy extensible, fully featured XCAP server with
 TLS security and support for multiple realms. The server is written in
 Python programming language and is based on the following RFCs:
 
-    * The Extensible Markup Language (XML) Configuration Access Protocol
-    (XCAP) [http://www.tools.ietf.org/html/rfc4825 RFC 4825]
+    - The Extensible Markup Language Configuration Access Protocol (RFC 4825)
 
-    * Formats for Representing Resource Lists
-    [http://www.tools.ietf.org/html/rfc4826 RFC 4826]
-    
-    * Usage for Manipulating Presence Document Contents
-    [http://www.tools.ietf.org/html/rfc4827 RFC 4827]
-    
-    * Presence Authorization Rules
-    [http://tech-invite.com/SIPWGs/03-WG-SIMPLE/Drafts/draft-ietf-simple-presence-rules-10.txt
-    draft-ietf-simple-presence-rules-10]
+    - Formats for Representing Resource Lists (RFC 4826)
+
+    - Usage for Manipulating Presence Document Contents (RFC 4827)
+
+    - Presence Authorization Rules (draft-ietf-simple-presence-rules-10)
 
 
 Features
@@ -54,20 +49,20 @@ Features
 
 Supported XCAP applications
 
-    * Resource lists (auid = resource-lists). A resource lists application
+    - Resource lists (auid = resource-lists). A resource lists application
     is any application that needs access to a list of resources, identified
     by a URI, to which operations, such as subscriptions, can be applied.
 
-    * RLS Services (auid = rls-services). A Resource List Server (RLS)
+    - RLS Services (auid = rls-services). A Resource List Server (RLS)
     services application is Session Initiation Protocol (SIP) application
     whereby a server receives SIP SUBSCRIBE requests for resource, and
     generates subscriptions towards the resource list.
 
-    * PIDF Manipulation (auid = pidf-manipulation). Pidf-manipulation
+    - PIDF Manipulation (auid = pidf-manipulation). Pidf-manipulation
     application usage defines how XCAP is used to manipulate the contents of
     PIDF based presence documents.
 
-    * Presence Rules (auid = presence-rules). A Presence Rules application
+    - Presence Rules (auid = presence-rules). A Presence Rules application
     is an application which uses authorization policies, also known as
     authorization rules, to specify what presence information can be given
     to which watchers, and when.
@@ -76,7 +71,7 @@ Supported XCAP applications
 Data storage
 
 OpenXCAP server supports multiple back-end storage systems and works out of
-the box with [http://openser.org OpenSER Proxy/Registrar/Presence] server.
+the box with OpenSER Proxy/Registrar/Presence server from http://openser.org
 
 
 XCAP clients
@@ -85,9 +80,13 @@ XCAP clients
 No server is useful without clients supporting their features. Here is list
 with XCAP clients known to be working with OpenXCAP:
 
-    * [http://openser.org OpenSER]
-    * simple-soap-proxy (under development). This client allows publication of arbitrary information and policy management using an easy to use SOAP/XML interface
-    * Eyebeam from [http://www.counterpath.com/eyebeam-overview.html Counterpath]
+    - OpenSER from http://openser.org
+    
+    - simple-soap-proxy (under development by AG Projects). This client
+    allows publication of arbitrary information and policy management using
+    an easy to use SOAP/XML interface
+    
+    - Eyebeam from http://www.counterpath.com/eyebeam-overview.html
 
 
 Support
