Fixed install rule
darcs-hash:20070903092756-b22ec-71d27d74bb3d7ab860febfdd87bb1dbfd5275657.gz

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+openxcap (0.9.1) unstable; urgency=low
+
+  * Fixed the debian control file.
+  * Fixed some lintian warnings.
+  * Added MANIFEST.in file.
+  * Removed no longer needed remove-version-control rule.
+
+ -- Dan Pascu <dan@ag-projects.com>  Mon, 03 Sep 2007 12:14:03 +0300
+
 openxcap (0.9.0) unstable; urgency=low
 
   * Initial release.
