--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ openxcap (0.9.1) unstable; urgency=low
   * Fixed install rule name.
   * Do not copy config.ini.sample as it is into /etc/openxcap/
   * Added tls directory and .placeholder to prevent it from being purged.
+  * Use relative paths for tls certificates in config.ini
 
- -- Dan Pascu <dan@ag-projects.com>  Mon, 03 Sep 2007 12:34:09 +0300
+ -- Dan Pascu <dan@ag-projects.com>  Mon, 03 Sep 2007 12:42:47 +0300
 
 openxcap (0.9.0) unstable; urgency=low
 
