--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+openxcap (0.9.2) unstable; urgency=low
+
+  * Changed the name and structure of xcap_xml table.
+  * Added the 'type' param to refreshWatchers OpenSER command.
+  * Added configuration option to disable XML schema validation.
+  * Updated XML scheme to allow EyeBeam resource lists to pass validation.
+  * Update debian dependencies.
+
+ -- Mircea Amarascu <mircea@ag-projects.com>  Wed, 19 Sep 2007 10:03:19 +0300
+
 openxcap (0.9.1) unstable; urgency=low
 
   * Fixed the debian control file.
