Increased version number.
darcs-hash:20070919123526-d7c9f-a18f7681b5c6093c80fc48871d42b37c48f60fe6.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Changes in version 0.9.3
+------------------------
+
+  * Adjusted OpenXCAP to use python-application >= 1.0.9
+  * Set TLS mode based on http/https scheme of the root URI.
+  * document_validation defaults to Yes in config.ini.sample
+
 Changes in version 0.9.2
 ------------------------
 
