Added "watchers" application to query OpenSER presence watchers
darcs-hash:20071010134118-58103-f3c8fa14285d84ee92ce9e64e756bdc281f25344.gz

--- a/README
+++ b/README
@@ -68,6 +68,11 @@ Supported XCAP applications
     authorization rules, to specify what presence information can be given
     to which watchers, and when.
 
+    - Watchers (auid = watchers). This this a custom application that queries
+    the OpenSER database for a list of presence watchers and their status.
+    The XML schema for this application can be found in
+    xcap/xml-schemas/watchers.xsd. This application is read-only.
+
 
 Data storage
 
