Increased version number.
darcs-hash:20071010142022-d7c9f-09d37151fb69252ba8727700966de4e05e486b11.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Changes in version 0.9.4
+------------------------
+
+  * Added "watchers" application to query OpenSER presence watchers.
+  * Include debian directory in the source archive.
+
 Changes in version 0.9.3
 ------------------------
 
