--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+openxcap (0.9.4) unstable; urgency=low
+
+  * Added "watchers" application to query OpenSER presence watchers.
+  * Include debian directory in the source archive.
+
+ -- Mircea Amarascu <mircea@ag-projects.com>  Wed, 10 Oct 2007 17:19:12 +0300
+
 openxcap (0.9.3) unstable; urgency=low
 
   * Adjusted OpenXCAP to use python-application >= 1.0.9
