Increase version and update changelog for 0.9.5
darcs-hash:20071017145508-58252-59b6be28e6bbc7c91f385a140940e581f43d9f2e.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Changes in version 0.9.5
+------------------------        
+
+  * Changed watcher application to reflect new database column names of
+    OpenSER revision 2923
+  * Changed default SQL table name from "xcap" to "xcap_xml"
+
 Changes in version 0.9.4
 ------------------------
 
