Increased version number.
darcs-hash:20071019053207-d7c9f-de282b772365c500c9bed52ef0c5d6ffae363f5e.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
+Changes in version 0.9.6
+------------------------
+
+  * Fixed trusted peer authentication bug against the latest Twisted
+    svn trunk.
+
 Changes in version 0.9.5
-------------------------        
+------------------------
 
   * Changed watcher application to reflect new database column names of
     OpenSER revision 2923
