--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openxcap (0.9.6) unstable; urgency=low
+
+  * Fixed trusted peer authentication bug against the latest Twisted svn trunk.
+
+ -- Mircea Amarascu <mircea@ag-projects.com>  Fri, 19 Oct 2007 08:29:13 +0300
+
 openxcap (0.9.5) unstable; urgency=low
 
   * Changed watcher application to reflect new database column names of OpenSER revision 2923
