Increased version number to 0.9.7 and modified changelog
darcs-hash:20071019123543-58103-956f6968159873cb1fc842288d0acf1926f407aa.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Changes in version 0.9.7
+-----------------------
+
+  * Prevented Twisted from printing SQL login info in the log
+  * Added some info to INSTALL about tested versions
+
 Changes in version 0.9.6
 ------------------------
 
