--- a/TODO
+++ b/TODO
@@ -16,3 +16,10 @@ Logging
 
 - Proper logging of URIs in syslog to reflect UA settings
 - Remove Twisted unnecessary logging
+
+
+Misc
+----
+
+- Have lxml not do online XML Schema schema validation from
+  www.w3.org.
