--- a/INSTALL
+++ b/INSTALL
@@ -6,7 +6,7 @@ Prerequisites:
 
  - LibXML (http://xmlsoft.org/downloads.html)
  - Python 2.4 or newer (www.python.org)
- - Twisted framework (http://twistedmatrix.com) - Twisted Core and Twisted Web 2 
+ - Twisted framework (http://twistedmatrix.com) - Twisted Core, Twisted Web and Twisted Web 2
    (get them from the SVN trunk)
  - lxml (http://codespeak.net/lxml)
  - python-application
