--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+openxcap (0.9.9) unstable; urgency=low
+
+  * Fixed node selector decoding
+  * Save presence rules documents under the same file name ("index.xml")
+  * Moved trusted_peers to [Authentication] config section
+  * Default xcap_table to "xcap" in config.ini.sample
+  * Improved URI logging
+  * DELETE of a full document doesn't produce an Etag in the 200 response
+  * Added SIP Thor backend
+
+ -- Mircea Amarascu <mircea@ag-projects.com>  Mon, 21 Jan 2008 23:26:29 +0200
+
 openxcap (0.9.8) unstable; urgency=low
 
   * Support subdirectories by using doc_uri column in xcap table.
