Increased version number to 0.9.9.1
darcs-hash:20080331113403-58103-95dec6ce9cc6c87f5e7bb0e61963d8acd5df4289.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Changes in version 0.9.9.1
+--------------------------
+
+  * Removed memcache access from the SIPThor backend to reflect change in
+    architecture
+
+  * Have SIPThor backend gracefully disconnect by having it install its own
+    signal handlers. Backends now include a installSignalHandlers boolean
+    variable.
+
 Changes in version 0.9.9
 ------------------------
 
