Updated version to 0.9.9.3
darcs-hash:20080603083244-58103-b02c717998e7c0d66d8e3d545a2f398931d16a28.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Changes in version 0.9.9.3
+--------------------------
+
+  * Changed some lxml function argument from positional to keyword
+
 Changes in version 0.9.9.2
 --------------------------
 
