--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openxcap (0.9.9.3) unstable; urgency=low
+
+  * Changed some lxml function argument from positional to keyword
+
+ -- Ruud Klaver <ruud@ag-projects.com>  Tue, 03 Jun 2008 10:32:06 +0200
+
 openxcap (0.9.9.2) unstable; urgency=low
 
   * Changed debian package to not automatically start the server on install
