Updated version to 0.9.9.4
darcs-hash:20080603083904-58103-354730c00175afc351aba271603f02c39f72918d.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Changes in version 0.9.9.4
+--------------------------
+
+  * Fixed one keyword argument too many
+
 Changes in version 0.9.9.3
 --------------------------
 
