Updated version to 0.9.9.5
darcs-hash:20080612085920-58103-1967e2b56a6ebc3d87dff979a15dadac61dad09e.gz

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openxcap (0.9.9.5) unstable; urgency=low
+
+  * Fixed a wrongly named positional argument
+
+ -- Ruud Klaver <ruud@ag-projects.com>  Thu, 12 Jun 2008 10:58:11 +0200
+
 openxcap (0.9.9.4) unstable; urgency=low
 
   * Fixed one keyword argument too many
