--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Changes in version 0.9.9.5
+--------------------------
+
+  * Fixed a wrongly named positional argument
+
 Changes in version 0.9.9.4
 --------------------------
 
