Updated changelog and authors
darcs-hash:20080805092300-58252-0fa87a1c94eaf94fb8239a9e28bf9e930e9af9a7.gz

--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 OpenXCAP
 --------
 
-Copyright (c) 2007 AG Projects 
+Copyright (c) 2007-2008 AG Projects 
 http://ag-projects.com
 
-Author: Mircea Amarascu
+Authors: Mircea Amarascu, Lucian Stanescu, Denis Bilenko
 
 
 License
