Added classic changelog
darcs-hash:20080805093738-58252-22a750772f8c79ca05c769135cc09d5830e81920.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Changes in version 1.0.0
+
+  * Added RLS services (RFC 4662 and RFC 4826)
+  * Added xcap-diff (draft-ietf-simple-xcap-diff-02)
+  * Update maintainer and uploaders
+  * Added test for rls-services
+  * Added test for resource-lists
+  * fixed TypeError: function takes at most 1 positional arguments (2 given)
+  * don't write 'etree.tostring(x, y)', write 'etree.tostring(x,  encoding=y,...)'
+
 Changes in version 0.9.9.5
 --------------------------
 
