--- a/README
+++ b/README
@@ -60,7 +60,7 @@ Supported XCAP applications
     generates subscriptions towards the resource list. For practical
     purposes, uri attributes in <service> do not have global scope, i.e. 
     several users may have services defined with the same uris, which is the
-    opposite in the RFC). Each user can maintain same service uris, the
+    opposite of the RFC. Each user can maintain the same service uris, the
     server identifies the right document from the XCAP Request URL.
     Requesting rls-services/global/index as described in the RFC does not
     seem to add any value and it was not implemented.
