--- a/README
+++ b/README
@@ -106,16 +106,14 @@ with XCAP clients known to be working with OpenXCAP:
 Support
 -------
 
-OpenXCAP has been started as a graduating thesis by Mircea Amarascu at the
-Polytechnic University of Bucharest in the spring of 2007.
+The project is supported via this wiki collaboration system provided at:
 
-The project is supported via this wiki collaboration system provided at
-http://openxcap.org by AG Projects.
+http://openxcap.org
 
     - To open ticket please Register first. The ticketing support system is
       available only for registered users. Please beware that the support is
       provided by the community on a best-effort basis.
 
-Commercial support or other licensing options are available from AG Projects
-http://ag-projects.com
+Commercial support or other licensing options are available from:
+AG Projects http://ag-projects.com
 
