--- a/README
+++ b/README
@@ -87,6 +87,26 @@ OpenXCAP server supports multiple back-end storage systems and works out of
 the box with OpenSIPs Proxy/Registrar/Presence server
 
 
+Publishing xcap-diff events
+
+OpenXCAP server can publish xcap-diff when a change occurs as described
+in http://tools.ietf.org/html/draft-ietf-simple-xcap-diff-09
+
+Generated event is published via OpenSER's management interface (function
+'publish' from pua_mi module). Checkout out sample openser.cfg in openser dir.
+OpenSER module presence_xcapdiff registers 'xcap-diff' event with presence in pua.
+
+To enable this feature in OpenXCAP backend 'OpenSER' must be used and
+enable_publish_xcapdiff parameter must be set to 'yes'.
+
+OpenXCAP doesn't put diff information into events, only uris and etags of
+affected documents. Client must use then external document retrieval.
+(This corresponds to rows 2, 4 and 5 in Figure 1 of the draft)
+
+There's no way to indicate what uris client has interest in, all changes
+to the documents belonging to given user are published.
+
+
 XCAP clients
 ------------
 
