--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,10 @@
 Changes in version 1.0.0
+------------------------
 
   * Added RLS services (RFC 4662 and RFC 4826)
-  * Added xcap-diff (draft-ietf-simple-xcap-diff-02)
-  * Update maintainer and uploaders
-  * Added test for rls-services
-  * Added test for resource-lists
-  * fixed TypeError: function takes at most 1 positional arguments (2 given)
+  * Added xcap-diff (draft-ietf-simple-xcap-diff-09)
+  * Added tests for rls-services and resource-lists
+  * Changed license from to GPL
 
 Changes in version 0.9.9.5
 --------------------------
