--- a/debian/changelog
+++ b/debian/changelog
@@ -2,13 +2,10 @@ openxcap (1.0.0) unstable; urgency=low
 
   * Added RLS services (RFC 4662 and RFC 4826)
   * Added xcap-diff (draft-ietf-simple-xcap-diff-09)
-  * Update maintainer and uploaders
-  * Added test for rls-services
-  * Added test for resource-lists
-  * fixed TypeError: function takes at most 1 positional arguments (2 given)
-  * 
+  * Added tests for rls-services and resource-lists
+  * Changed license from to GPL
 
- -- Adrian Georgescu <ag@ag-projects.com>  Tue, 05 Aug 2008 12:31:39 +0200
+ -- Adrian Georgescu <ag@ag-projects.com>  Mon, 25 Aug 2008 14:03:37 +0200
 
 openxcap (0.9.9.5) unstable; urgency=low
 
