--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ Changes in version 1.0.0
   * Added xcap-diff (draft-ietf-simple-xcap-diff-09)
   * Added tests for rls-services and resource-lists
   * Changed license from to GPL
+  * Changed development status from beta to production
 
 Changes in version 0.9.9.5
 --------------------------
