--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ openxcap (1.0.0) unstable; urgency=low
   * Added xcap-diff (draft-ietf-simple-xcap-diff-09)
   * Added tests for rls-services and resource-lists
   * Changed license from to GPL
+  * Changed development status from beta to production
 
- -- Adrian Georgescu <ag@ag-projects.com>  Mon, 25 Aug 2008 14:03:37 +0200
+ -- Adrian Georgescu <ag@ag-projects.com>  Mon, 25 Aug 2008 14:05:34 +0200
 
 openxcap (0.9.9.5) unstable; urgency=low
 
