get/put/delete element (with tests)
darcs-hash:20080825141554-b2873-2d9849d69e1ead9a23efbc706ded3b6a690cbd7a.gz

--- a/INSTALL
+++ b/INSTALL
@@ -10,6 +10,7 @@ Prerequisites:
    (get them from the SVN trunk)
  - lxml (http://codespeak.net/lxml)
  - python-application
+ - python-xml
 
  To enable TLS support, you need:
  - GnuTLS library (http://www.gnu.org/software/gnutls)
