fixed typo in INSTALL
darcs-hash:20080828082335-b2873-79f698383504c14c62d293846b1d13e04dade09e.gz

--- a/INSTALL
+++ b/INSTALL
@@ -44,7 +44,7 @@ python test.py --xcap-root https://xcap.example.com/xcap-root --username alice@e
 
 Notes
 
-- Running the test suite for a give user will result in the destruction of
+- Running the test suite for a given user will result in the destruction of
 all xcap documents belonging to that user
 - Replacing 'test.py' with 'test_something.py' will run only the tests
 defined in test_something.py
