--- a/debian/changelog
+++ b/debian/changelog
@@ -2,14 +2,15 @@ openxcap (1.0.0) unstable; urgency=high
 
   * Added RLS services (RFC 4662 and RFC 4826)
   * Added support for xcap-diff based on draft-ietf-simple-xcap-diff-09
+  * Added partial get/put/delete of elements in the XCAP documents 
   * Added test suite for rls-services, resource-lists and partial updates
+  * Many bug fixes from field experiences
+  * Development status from beta to production
   * Switched to Python 2.5
-  * Better documentation
+  * Improved documentation and testing suite
   * Changed license to GPL
-  * Many bug fixes
-  * Changed development status from beta to production
 
- -- Adrian Georgescu <ag@ag-projects.com>  Mon, 25 Aug 2008 14:05:34 +0200
+ -- Adrian Georgescu <ag@ag-projects.com>  Sat, 30 Aug 2008 11:29:19 +0200
 
 openxcap (0.9.9.5) unstable; urgency=low
 
