Added xcapclient.ini to readme
darcs-hash:20080908111050-58252-8d0f3f30c72c4bc1ebcb169d36722fad6ec189f1.gz

--- a/README
+++ b/README
@@ -141,6 +141,8 @@ XCAP clients
 No server is useful without clients supporting their features. Here is list
 with XCAP clients known to be working with OpenXCAP:
 
+    - XCAP client from http://download.ag-projects.com/OpenXCAP/clients/
+
     - OpenSER from http://openser.org
 
     - soap-simple-proxy. This client allows publication of arbitrary
